--- a/public/views/expired.jade
+++ b/public/views/expired.jade
@@ -2,6 +2,7 @@
 html
 	head
 		title vecturia | error
+		link(rel='shortcut icon', href='http://vecturia.com/design/favicon.ico')
 		link(rel='stylesheet', href='css/layout.css')
 
 	body(style='padding:100px;')
