--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -2,6 +2,7 @@
 html
 	head
 		title vecturia
+		link(rel='shortcut icon', href='http://vecturia.com/design/favicon.ico')
 		link(rel='stylesheet', href='css/layout.css')
 
 	body
