--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -4,6 +4,7 @@ html
 		title vecturia
 		link(rel='shortcut icon', href='http://vecturia.com/design/favicon.ico')
 		link(rel='stylesheet', href='css/layout.css')
+		meta(name='viewport', content='width=device-width')
 
 	body
 		script(type='text/javascript', src='js/jquery-1.8.2.min.js')
