--- a/public/views/css/layout.css
+++ b/public/views/css/layout.css
@@ -116,6 +116,7 @@ div.dropdown_option, a.dropdown_option {
 	height: 24px;
 	padding: 20px;
 	padding-left:100px;
+	padding-right:100px;
 	font-size: 24px;
 }
 a.dropdown_option:hover {
